# Web-Dictionary

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
fetcher/: fetcher.cpp  fetcher.h
screenManager/: screenManager.cpp  screenManager.h
screens/: dataScreen.cpp  dataScreen.h  screen.h  searchScreen.cpp  searchScreen.h
src/: main.cpp
ui/: ui.h
